docs/samples/llmisvc/ocp-4-18-setup/installation/sail.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: istio-cni
---
apiVersion: v1
kind: Namespace
metadata:
  name: istio-system
